// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldContainer renders custom component and labelComponent elements 1`] = `
<FieldContainer
  component="fieldset"
  label="Foo"
  labelComponent="legend"
  render={[Function]}
>
  <fieldset
    className="ds-c-fieldset"
  >
    <FormLabel
      component="legend"
      errorId="field_2-error"
      fieldId="field_2"
      id="field_2-label"
    >
      <legend
        className="ds-c-label"
        htmlFor="field_2"
        id="field_2-label"
      >
        <span
          className=""
        >
          Foo
        </span>
      </legend>
    </FormLabel>
    <input
      aria-describedby="field_2-label"
      id="field_2"
    />
  </fieldset>
</FieldContainer>
`;

exports[`FieldContainer renders default component and labelComponent elements 1`] = `
<FieldContainer
  component="div"
  label="Foo"
  labelComponent="label"
  render={[Function]}
>
  <div
    className=""
  >
    <FormLabel
      component="label"
      errorId="field_1-error"
      id="field_1-label"
    >
      <label
        className="ds-c-label"
        id="field_1-label"
      >
        <span
          className=""
        >
          Foo
        </span>
      </label>
    </FormLabel>
    <input
      aria-describedby="field_1-label"
      id="field_1"
    />
  </div>
</FieldContainer>
`;
